--- a/package.json
+++ b/package.json
@@ -6,8 +6,28 @@
     "express": "4.13.4",
     "ip": "1.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-cli": "6.5.1",
+    "babel-core": "6.5.2",
+    "babel-loader": "6.2.2",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-react-jsx": "^6.5.2",
+    "babel-plugin-transform-runtime": "6.5.2",
+    "babel-preset-es2015": "6.5.0",
+    "babel-preset-stage-0": "6.5.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.8.1",
+    "postcss-loader": "^0.8.1",
+    "url-loader": "^0.5.7",
+    "webpack": "1.12.13",
+    "webpack-dev-server": "1.14.1"
+  },
   "scripts": {
+    "dev": "",
+    "prod": "NODE_ENV=production",
+    "build": "",
+    "prebuild": "mkdir -p build && ncp client/assets build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
